# AI-Platform-Lab

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: litellm.yaml
docker/litellm/: README.md
docker/ollama/: README.md
docker/open-webui/: README.md
docker/qdrant/: README.md
docs/: README.md  architecture.md  development.md  roadmap.md
docs/adr/: ADR-000-portfolio-philosophy.md
documents/: sample.md
examples/: chat.py  embed.py  index_documents.py  ingest.py  search.py
scripts/: bootstrap.sh  model-manager.sh  platform-doctor.sh
scripts/lib/: common.sh
src/: main.py
src/ai_platform/: chunking.py  embeddings.py  indexer.py  llm.py  loader.py  retriever.py  types.py  vector_store.py
src/ai_platform_lab.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/config/: settings.py
tests/: test_retriever.py
