[project]
name = "ai-platform-lab"
version = "0.1.0"
description = "Local AI Platform built with Ollama, LiteLLM, Qdrant and Open WebUI."
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "openai>=1.90.0",
    "litellm",
    "openai>=1.50.0",
    "qdrant-client>=1.11.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

